# spotify-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: backend.py  main.py  models.py
app/config/: common.py  config.yaml
