[tool.poetry]
name = "spotify-api"
version = "0.1.0"
description = "Simple Spotify API for interview challenge."
authors = ["Juan I. Carlis <juancarlis93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.68.0,<0.69.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
